# Micro-Servicios-GSFR

./: .gitignore
parciales/primer-parcial/gestion-medicos/: docker-compose.yml  package.json  server.js
parciales/segundo-parcial/: docker-compose.yml  nginx.conf
parciales/segundo-parcial/microservicio-autenticacion/: .env.example  README.md  package-lock.json  package.json
parciales/segundo-parcial/microservicio-envios/: .env.example  Dockerfile
parciales/segundo-parcial/microservicio-vehiculos/: .env.example  .gitignore  Dockerfile  Readme.md  requirements.txt
practicas/practica-1/: alumnos.json  practica1-mongodb.txt
practicas/practica-grpc/: .gitignore
practicas/practica-grpc/grpc-estudiantes/: client.js  package.json  server.js
practicas/practica-grpc/grpc-universidad/: client.js  package.json  server.js
practicas/practica3-dockerizando/1-calculadora-web/: Dockerfile  package-lock.json  package.json  server.js
practicas/practica6-RabbitMQ/: Prueba Registros RabbitMQ.jmx
tareas/Tarea4-RestFul/: package.json
tareas/Tarea4-RestFul/src/: app.js
tareas/graphql-rust/: .env  Cargo.toml
tareas/graphql-rust/src/: main.rs
tareas/graphql-rust/src/config/: mod.rs
tareas/graphql-rust/src/domain/: alumno.rs
tareas/graphql-rust/src/graphql/: mod.rs  mutation.rs  query.rs  schema.rs
tareas/rust-api-rest/: Cargo.toml
tareas/tarea2-crud-mongodb/: .dockerignore  Dockerfile  docker-compose.yml  package-lock.json  package.json
temas/grpc-example/: package-lock.json  package.json
temas/universidad-grpc/: package-lock.json  package.json
(+209 files in other folders)
